# UPS-SP

Dice_Client/: pom.xml
Dice_Client/src/main/java/usp_sp/: Main.java
Dice_Client/src/main/java/usp_sp/GUI/: GamePanel.java  (+4 more)
Dice_Client_v2/: pom.xml
Dice_Client_v2/src/main/java/ups_sp/: Main.java
Dice_Client_v2/src/main/java/usp_sp/: Main.java
Dice_Server/: .gitignore  CMakeLists.txt  Dice_Server  Makefile  main.c
Dice_Server/Setup/: server.c  server.h
Dice_Server/Worker/: procces.c  procces.h
Dice_Server/src/: main.c
Dice_Server/src/Setup/: server.c  server.h
Dice_Server/src/Struct/: dice.c  dice.h  lobby.c  lobby.h  player.c  player.h  state.h
Dice_Server/src/Worker/: procces.c
Dice_Server_v2/: CMakeLists.txt
Dice_Server_v2/src/: main.cpp
Dice_Server_v2/src/Data/: DataVectors.cpp  DataVectors.h  Dice.cpp  Dice.h  Game.cpp  Game.h  Player.cpp  Player.h
Dice_Server_v2/src/Events/: Events.cpp  Events.h
Dice_Server_v2/src/Messages/: Login.cpp  Logout.cpp  MessageFormat.cpp  MessageFormat.h  TAGS.h
Dice_Server_v2/src/Messages/MessageTypes/: GameM.cpp  Login.cpp  Logout.cpp  Queue.cpp  Reconnect.cpp  RejoinQ.cpp
Dice_Server_v2/src/Server/: MessageProcessing.cpp  Server.cpp  Server.h
Dice_Server_v2/src/Utils/: Consts.h  ScoreCalculation.cpp  ScoreCalculation.h  ServerCommands.cpp  ServerCommands.h
Doc/: .$Protocol.drawio.bkp  .$Protocol.drawio.dtmp
Doc/Doc/: doc.aux  doc.fdb_latexmk  doc.fls  doc.out  doc.tex  doc.toc
Doc/Protocol/: .$Protocol.drawio.bkp  .$Protocol.drawio.dtmp  Protocol.drawio  poz.txt
Finish/Client/: help.txt
Finish/Server/src/Data/: DataVectors.h  Game.cpp  Game.h  Player.cpp  Player.h
Finish/Server/src/Events/: Events.h
Finish/Server/src/Messages/: MessageFormat.cpp
Finish/Server/src/Messages/MessageTypes/: GameM.cpp  Reconnect.cpp
Finish/Server/src/Server/: MessageProcessing.cpp  Server.cpp  Server.h
Finish/Server/src/Utils/: Consts.h  ScoreCalculation.cpp  ServerCommands.cpp  ServerCommands.h
Protocol/: .$protocol_diagram.drawio.bkp  .gitignore  protocol_diagram.drawio
Protocol/doc/: ups_dice_protocol.tex
TESTsrc_NO_Reconnect/Client/: pom.xml
TESTsrc_NO_Reconnect/Server/src/Data/: Player.cpp
TESTsrc_NO_Reconnect/Server/src/Events/: Events.cpp
TESTsrc_NO_Reconnect/Server/src/Messages/: TAGS.h
TESTsrc_NO_Reconnect/Server/src/Server/: Server.cpp  Server.h
TESTsrc_NO_Reconnect/Server/src/Utils/: ServerCommands.cpp  ServerCommands.h
TESTsrc_Reconnect/Server/: Makefile
TESTsrc_Reconnect/Server/src/: main.cpp
TESTsrc_Reconnect/Server/src/Data/: Game.h
TESTsrc_Reconnect/Server/src/Events/: Events.cpp
TESTsrc_Reconnect/Server/src/Messages/: TAGS.h
TESTsrc_Reconnect/Server/src/Server/: MessageProcessing.cpp
TESTsrc_Reconnect/Server/src/Utils/: ServerCommands.cpp
(+55 files in other folders)
